added SignUp Page

--- a/ClientApp/public/index.html
+++ b/ClientApp/public/index.html
@@ -6,8 +6,9 @@
     <meta name="theme-color" content="#000000">
     <base href="%PUBLIC_URL%/" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!---Bootstrap --->
+    <!---Bootstrap Liberaries --->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <!---Jquery --->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <!---FontAwesome --->
