--- a/ClientApp/public/index.html
+++ b/ClientApp/public/index.html
@@ -5,13 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="theme-color" content="#000000">
     <base href="%PUBLIC_URL%/" />
+
+
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!---Bootstrap Liberaries --->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-    <!---Jquery --->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-    <!---FontAwesome --->
     <script src="https://use.fontawesome.com/releases/v5.5.0/css/all.css"></script>
 
 
@@ -30,8 +29,10 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+
     <script src="https://kit.fontawesome.com/70cef0d6d6.js" crossorigin="anonymous"></script>
-    <title>TECHMarket</title>
+
+    <title>TechMarket</title>
 </head>
   <body>
     <noscript>
